<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_nav_browse" />

    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/bottom_nav_faq" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_mail_outline_black_24dp"
        android:title="@string/bottom_nav_inbox" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/bottom_nav_profile" />

</menu>